Refactor RoomsUsageServiceImpl. Add comments explainig algorithm